# Clover-Edition

./: .gitignore  Dockerfile  JsonLogHandler.py  Procfile  README.md  RUN_K9000.bat  config.ini  custom_tts.py  format_saves_to_stories.py  getconfig.py  optional-requirements.txt  play.py  play_discord_bot.py  pyproject.toml  requirements.txt  speechsdk_test.py  start_discord_bot.py  storymanager.py  voicery_tts.py
aidungeon/: __init__.py  getconfig.py  storymanager.py  utils.py
data/: censored_words.txt
requirements/: requirements.txt
tools/data/: censored_words.txt
