[tool.poetry]
name = "clover-edition"
version = "0.1.0"
description = ""
authors = ["Jason Petterson <jp@brokenshotgun.com>"]

[tool.poetry.dependencies]
python = "^3.7"
profanityfilter = "^2.0.6"
torch = "^1.7.1"
transformers = "^2.3.0"
"discord.py" = {extras = ["voice"], version = "^1.5.1"}
google-cloud-texttospeech = "^2.2.0"
azure-cognitiveservices-speech = "^1.14.0"
python-slugify = "^4.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
